--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img {
 body {
     font-family: "Inter", sans-serif;
     background: #F5F8FF;
-   
+
 }
 
 
@@ -77,6 +77,8 @@ body {
     font-weight: bold;
 }
 
+
+/* Banner */
 .banner {
     height: 461px;
     display: flex;
@@ -224,61 +226,87 @@ body {
 
 
 /* subscribe */
+
+
 .subscribe {
-    height: 583px;
-    background: url(./assets/news-letter-bg.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    display: grid;
-    place-items: center;
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
+  
+  
 }
 
+.subscribe img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* Center the subscribe box over the image */
 .subscribe-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+   
     width: 100%;
     max-width: 830px;
-    margin: 0 auto;
-    height: 140px;
-    text-align: center;
-
+    height: 150px;
+   
+    z-index: 2;
+   
+   
 }
-
-.subscribe-box>h1 {
-    font-size: 50px;
+.subscribe-box>h1{
+    font-size: 40px;
     color: #ffffff;
     font-weight: bold;
     font-family: "Noto Serif", serif;
-    margin-bottom: 16px;
-
+    
 }
 
 .input-box {
     display: flex;
-    flex-direction: row;
+    width: 100%;
+    align-items: center;
+
+    justify-content: center;
+    margin-top: 16px;
+   
 }
 
-.input-box>input {
-    width: 100%;
-    max-width: 644px;
+.input-box> input {
+
+   
+    width: 80%;
     padding: 15px 20px;
     background: #ffffff;
     height: 50px;
     border: none;
     margin-right: 0;
+    min-width: 200px;
+    max-width: 644px;
 }
 
+.input-box .btn {
 
-.btn {
+
+
     text-align: center;
-    width: 186px;
+    max-width: 186px;
     height: 50px;
     border: none;
     font-size: 16px;
+    padding: 0 30px;
     font-weight: 400;
     color: #ffffff;
     background: #E95A08;
-  
 }
+
+
 
 
 /* Footer */
@@ -343,3 +371,174 @@ body {
 
 
 
+
+@media screen and (max-width:600px) {
+
+    .container {
+       
+        margin: 0;
+    }
+
+    .content-width {
+        margin: 0;
+    }
+/* Navbar */
+    .navbar {
+        padding: 0 16px;
+        width: 100%;
+
+    }
+
+    .nav-links {
+        display: none;
+
+    }
+
+    .mob-cart {
+        display: block;
+    }
+
+
+
+/* banner  */
+
+
+    .banner {
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        
+
+    }
+
+    .banner-image {
+        width: 100%;
+        flex: 0;
+        margin: 0 auto;
+    }
+
+    .banner-content {
+        padding: 16px 28px;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    .banner-image>img {
+        width: 100%;
+        object-fit: contain;
+
+    }
+
+    .banner-title {
+        font-size: 24px;
+        margin-bottom: 13px;
+    }
+
+    .banner-description {
+        font-size: 14px;
+        width: 100%;
+    }
+
+    .plant {
+        width: 100%;
+    }
+
+    .plant-container {
+        width: 100%;
+
+        grid-template-columns: repeat(2, 1fr);
+        margin-bottom: 0;
+    }
+      .plant {
+        padding: 15px;
+
+
+
+
+        margin-top: 50px;
+    }
+
+    .plant-title {
+        font-size: 24px;
+        margin-bottom: 16px;
+    }
+
+    .plant-description {
+        font-size: 14px;
+        padding: 0 28px;
+    }
+
+
+    
+
+
+ 
+
+
+    /* Subscribe */
+
+.subscribe-box {
+  align-items: end;
+  display: grid;
+  place-items: center;
+}
+
+     .subscribe-box h1 {
+    font-size: 24px;
+  }
+
+
+
+ 
+
+  .input-box{
+    width: 80%;
+    margin: 0 auto;
+   
+  }
+
+  .input-box .btn{
+    padding: 0 20px;
+  }
+
+
+
+
+  /* footer */
+
+  .footer-container {
+        padding: 20px;
+      
+        grid-template-columns: 1fr;
+        place-items: start;
+    }
+
+    .footer-box2>ul{
+        grid-template-columns: 1fr;
+        margin-top: 30px;
+        
+        
+    }
+    .footer-box2>ul>li{
+        /* place-items: start; */
+        /* justify-items: start; */
+        justify-self: start;
+    }
+    .footer-box3{
+        width: 100%;
+        justify-content: space-evenly;
+        margin: 20px 0;
+        /* background: #bb7878; */
+    }
+
+
+  
+
+ 
+
+
+
+
+
+
+}
