--- a/style.css
+++ b/style.css
@@ -224,6 +224,200 @@ body {
 
 
 
+/* Trust Section */
+
+.trust {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+ 
+  width: 100%;
+  margin-bottom: 135px;
+}
+
+.trust-left,
+.trust-right {
+  max-width: 540px;
+  flex: 1;
+}
+
+.trust-left {
+  position: relative;
+  background: #000;
+  z-index: 20;
+}
+
+.store-image {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+
+@keyframes rotate360{
+    from {
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
+.trust-badge {
+  position: absolute;
+  top: -130px;
+  right: -90px;
+  height: 286px;
+  width: 286px;
+  object-fit: cover;
+  z-index: 1;
+  animation:rotate360 5s linear infinite;
+}
+
+.trust-right {
+  z-index: 20;
+  text-align: start;
+}
+
+.trust-right > h1 {
+  font-size: 50px;
+  font-family: "Noto Serif", serif;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #000000;
+}
+
+.trust-right > ul > li {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 22px;
+  font-family: "Inter", serif;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+
+
+/* Latest Deal */
+.latest-deal {
+  text-align: center;
+  margin-bottom: 120px;
+  /* padding: 0 1rem; */
+}
+
+.latest-deal > h1 {
+  font-size: 50px;
+  color: #E95A08;
+  font-weight: bold;
+  font-family: "Noto Serif", serif;
+  margin-bottom: 16px;
+}
+
+.latest-deal > h1 > span {
+  color: #000;
+}
+
+.latest-deal > p {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 22px;
+  font-family: "Inter", serif;
+  font-weight: 500;
+  max-width: 888px;
+  margin: 0 auto 20px;
+}
+
+.deals {
+  display: grid;
+  grid-template-columns: 367px 1fr;
+  gap: 28px;
+  margin-top: 120px;
+  width: 100%;
+}
+
+.deal-left {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  height: 100%;
+  width: 100%;
+}
+
+.deal1, .deal2 {
+  height: 206px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 14px;
+  position: relative;
+}
+
+.deal1 {
+  background-image: url(./assets/deal-bloom.png);
+}
+
+.deal2 {
+  background-image: url(./assets/deal-ana.png);
+}
+
+.deal-right {
+  background: url(./assets/deal-zabo.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 14px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.deal-title,
+.deal-right .overlay > h1 {
+  font-size: 20px;
+  color: #ffffff;
+  font-weight: bold;
+  font-family: "Noto Serif", serif;
+  margin-bottom: 16px;
+}
+
+.deal-right .overlay > h1 {
+  font-size: 40px;
+}
+
+.shop,
+.deal-right .overlay > a {
+  font-size: 16px;
+  color: #ffffff;
+  font-weight: 400;
+  font-family: "Inter", serif;
+  padding: 8px 16px;
+  border-radius: 5px;
+ 
+}
+
+.shop:hover,
+.deal-right .overlay > a:hover {
+  background-color: #cc4a06;
+}
+
+
+
+
+
 
 /* subscribe */
 
@@ -407,6 +601,7 @@ body {
         flex-direction: column-reverse;
         align-items: center;
         justify-content: center;
+        margin-top: 50px;
         
 
     }
@@ -415,6 +610,7 @@ body {
         width: 100%;
         flex: 0;
         margin: 0 auto;
+       
     }
 
     .banner-content {
@@ -468,6 +664,80 @@ body {
         padding: 0 28px;
     }
 
+
+
+    /* Trust Section  */
+    .trust {
+        margin: 20px 0;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+  }
+  
+
+  .trust-left,
+  .trust-right {
+    max-width: 100%;
+  }
+
+  .trust-right{
+    padding-left: 30px;
+  }
+
+  .trust-right > h1 {
+    font-size: 24px;
+    margin: 20px 0;
+  }
+
+  .trust-right > ul > li {
+    font-size: 16px;
+  }
+
+  .trust-badge {
+  display: none;
+  }
+
+
+  /* Latest Deals */
+
+.latest-deal{
+    padding: 15px;
+}
+   .latest-deal > h1 {
+    font-size: 24px;
+  }
+
+  .latest-deal > p {
+    font-size: 16px;
+  }
+
+  .deals {
+    grid-template-columns: 1fr;
+    gap: 20px;
+    margin-top: 60px;
+   
+    justify-items: start;
+  }
+
+    .deal-right {
+    min-height: 206px; /* or whatever looks good on your layout */
+  }
+
+
+  .deal-right .overlay > h1 {
+    font-size: 28px;
+  }
+
+  .deal-title {
+    font-size: 18px;
+  }
+
+  .deal-right .overlay > a,
+  .shop {
+    font-size: 14px;
+    padding: 6px 12px;
+  }
 
     
 
