--- a/style.css
+++ b/style.css
@@ -1,131 +1,129 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 body {
-    font-family: "Inter", sans-serif;
-    background: #F5F8FF;
+  font-family: "Inter", sans-serif;
+  background: #F5F8FF;
 
 }
 
 
 .container {
-    max-width: 100%;
-    max-width: 1440px;
-    margin: 0 auto;
+  max-width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .content-width {
-    max-width: 1140px;
-    width: 100%;
-    margin: 0 auto;
+  max-width: 1140px;
+  width: 100%;
+  margin: 0 auto;
 
 }
 
 /* Header */
 
 .navbar {
-    height: 71px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 30px;
-    margin-bottom: 120px;
+  height: 71px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 120px;
 }
 
 .mob-cart {
-    display: none;
+  display: none;
 }
 
 .logo {
-    width: 135px;
-    height: 90%;
-    object-fit: contain;
+  width: 135px;
+  height: 90%;
+  object-fit: contain;
 }
 
 .nav-links {
-    display: flex;
+  display: flex;
 }
 
 .nav-link {
-    list-style: none;
-    padding-right: 48px;
-    margin-top: 18px;
-    margin-bottom: 18px;
+  list-style: none;
+  padding-right: 48px;
+  margin-top: 18px;
+  margin-bottom: 18px;
 }
 
 .nav-link>a {
-    text-decoration: none;
-    color: #8987A1;
-    font-size: medium;
+  text-decoration: none;
+  color: #8987A1;
+  font-size: medium;
 
 }
 
 .nav-link>span {
-    color: #000000;
-    font-size: medium;
+  color: #000000;
+  font-size: medium;
 }
 
 .active {
-    color: #000000;
-    font-weight: bold;
+  color: #000000;
+  font-weight: bold;
 }
 
 
 /* Banner */
 .banner {
-    height: 461px;
-    display: flex;
-    align-items: end;
-    margin-bottom: 120px;
+  height: 461px;
+  display: flex;
+  align-items: end;
+  margin-bottom: 120px;
 
-    width: 100%;
-
-
+  width: 100%;
 
 }
 
 .banner-content {
-    flex: 1;
+  flex: 1;
 
-    height: 300px;
+  height: 300px;
 
 }
 
 .banner-image {
-    flex: 1;
+  flex: 1;
 
-    height: 355px;
+  height: 355px;
 }
 
 .banner-image>img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 
 }
 
 .banner-title {
-    font-size: 65px;
-    font-family: "Noto Serif", serif;
-    font-weight: bold;
-    color: #000000;
+  font-size: 65px;
+  font-family: "Noto Serif", serif;
+  font-weight: bold;
+  color: #000000;
 }
 
 .banner-title>span {
-    color: #E95A08;
+  color: #E95A08;
 }
 
 .banner-description {
-    color: rgba(0, 0, 0, 0.5);
-    font-size: 22px;
-    font-weight: 500;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 22px;
+  font-weight: 500;
 
 }
 
@@ -134,91 +132,91 @@ body {
 /* Plants Style */
 
 .plant {
-    text-align: center;
-    width: 100%;
+  text-align: center;
+  width: 100%;
 
 }
 
 .plant-title {
-    font-size: 50px;
-    font-family: "Noto Serif", serif;
-    font-weight: bold;
-    color: #E95A08;
+  font-size: 50px;
+  font-family: "Noto Serif", serif;
+  font-weight: bold;
+  color: #E95A08;
 
 }
 
 .plant-title>span {
-    color: #000000;
+  color: #000000;
 }
 
 .plant-description {
-    font-size: 22px;
-    font-weight: 500;
-    color: rgba(0, 0, 0, 0.5);
-    margin-bottom: 48px;
+  font-size: 22px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.5);
+  margin-bottom: 48px;
 }
 
 .plant-container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    place-items: center;
-    margin-bottom: 210px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  place-items: center;
+  margin-bottom: 210px;
 
 }
 
 .card {
-    height: 485px;
-    width: 100%;
-    max-width: 322px;
+  height: 485px;
+  width: 100%;
+  max-width: 322px;
 
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 
 }
 
 .card-image {
 
-    width: 100%;
-    max-height: 322px;
+  width: 100%;
+  max-height: 322px;
 
 
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .card-image>img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .card-description {
-    text-align: center;
+  text-align: center;
 }
 
 .card-description>h1 {
-    font-size: 22px;
-    color: #111111;
-    font-weight: bold;
-    margin-bottom: 30px;
+  font-size: 22px;
+  color: #111111;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
 
 .card-description>h2 {
-    font-size: 22px;
-    color: #111111;
-    font-weight: 500;
-    margin-bottom: 20px;
+  font-size: 22px;
+  color: #111111;
+  font-weight: 500;
+  margin-bottom: 20px;
 }
 
 .card-btn {
-    text-align: center;
-    width: 100%;
-    border: none;
-    font-size: 16px;
-    font-weight: 400;
-    color: #ffffff;
-    background: #E95A08;
-    padding: 19px 0;
+  text-align: center;
+  width: 100%;
+  border: none;
+  font-size: 16px;
+  font-weight: 400;
+  color: #ffffff;
+  background: #E95A08;
+  padding: 19px 0;
 }
 
 
@@ -232,7 +230,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
- 
+  padding: 20px;
   width: 100%;
   margin-bottom: 135px;
 }
@@ -256,14 +254,16 @@ body {
 }
 
 
-@keyframes rotate360{
-    from {
-        transform: rotate(0deg);
-    }
-    to{
-        transform: rotate(360deg);
-    }
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
+
 .trust-badge {
   position: absolute;
   top: -130px;
@@ -272,15 +272,18 @@ body {
   width: 286px;
   object-fit: cover;
   z-index: 1;
-  animation:rotate360 5s linear infinite;
+  animation: spin 3s linear infinite;
 }
+
 
 .trust-right {
   z-index: 20;
   text-align: start;
+  padding: 30px;
+
 }
 
-.trust-right > h1 {
+.trust-right>h1 {
   font-size: 50px;
   font-family: "Noto Serif", serif;
   font-weight: bold;
@@ -288,7 +291,7 @@ body {
   color: #000000;
 }
 
-.trust-right > ul > li {
+.trust-right>ul>li {
   color: rgba(0, 0, 0, 0.5);
   font-size: 22px;
   font-family: "Inter", serif;
@@ -302,10 +305,11 @@ body {
 .latest-deal {
   text-align: center;
   margin-bottom: 120px;
-  /* padding: 0 1rem; */
+  padding: 20px;
+
 }
 
-.latest-deal > h1 {
+.latest-deal>h1 {
   font-size: 50px;
   color: #E95A08;
   font-weight: bold;
@@ -313,11 +317,11 @@ body {
   margin-bottom: 16px;
 }
 
-.latest-deal > h1 > span {
+.latest-deal>h1>span {
   color: #000;
 }
 
-.latest-deal > p {
+.latest-deal>p {
   color: rgba(0, 0, 0, 0.5);
   font-size: 22px;
   font-family: "Inter", serif;
@@ -342,7 +346,8 @@ body {
   width: 100%;
 }
 
-.deal1, .deal2 {
+.deal1,
+.deal2 {
   height: 206px;
   width: 100%;
   background-repeat: no-repeat;
@@ -386,7 +391,7 @@ body {
 }
 
 .deal-title,
-.deal-right .overlay > h1 {
+.deal-right .overlay>h1 {
   font-size: 20px;
   color: #ffffff;
   font-weight: bold;
@@ -394,23 +399,23 @@ body {
   margin-bottom: 16px;
 }
 
-.deal-right .overlay > h1 {
+.deal-right .overlay>h1 {
   font-size: 40px;
 }
 
 .shop,
-.deal-right .overlay > a {
+.deal-right .overlay>a {
   font-size: 16px;
   color: #ffffff;
   font-weight: 400;
   font-family: "Inter", serif;
   padding: 8px 16px;
   border-radius: 5px;
- 
+
 }
 
 .shop:hover,
-.deal-right .overlay > a:hover {
+.deal-right .overlay>a:hover {
   background-color: #cc4a06;
 }
 
@@ -423,81 +428,82 @@ body {
 
 
 .subscribe {
-    position: relative;
-    width: 100%;
-    max-width: 100%;
-    overflow: hidden;
-  
-  
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+
+
 }
 
 .subscribe img {
-    width: 100%;
-    height: auto;
-    display: block;
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 /* Center the subscribe box over the image */
 .subscribe-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: white;
-   
-    width: 100%;
-    max-width: 830px;
-    height: 150px;
-   
-    z-index: 2;
-   
-   
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+
+  width: 100%;
+  max-width: 830px;
+  height: 150px;
+
+  z-index: 2;
+
+
 }
-.subscribe-box>h1{
-    font-size: 40px;
-    color: #ffffff;
-    font-weight: bold;
-    font-family: "Noto Serif", serif;
-    
+
+.subscribe-box>h1 {
+  font-size: 40px;
+  color: #ffffff;
+  font-weight: bold;
+  font-family: "Noto Serif", serif;
+
 }
 
 .input-box {
-    display: flex;
-    width: 100%;
-    align-items: center;
+  display: flex;
+  width: 100%;
+  align-items: center;
 
-    justify-content: center;
-    margin-top: 16px;
-   
+  justify-content: center;
+  margin-top: 16px;
+
 }
 
-.input-box> input {
+.input-box>input {
 
-   
-    width: 80%;
-    padding: 15px 20px;
-    background: #ffffff;
-    height: 50px;
-    border: none;
-    margin-right: 0;
-    min-width: 200px;
-    max-width: 644px;
+
+  width: 80%;
+  padding: 15px 20px;
+  background: #ffffff;
+  height: 50px;
+  border: none;
+  margin-right: 0;
+  min-width: 200px;
+  max-width: 644px;
 }
 
 .input-box .btn {
 
 
 
-    text-align: center;
-    max-width: 186px;
-    height: 50px;
-    border: none;
-    font-size: 16px;
-    padding: 0 30px;
-    font-weight: 400;
-    color: #ffffff;
-    background: #E95A08;
+  text-align: center;
+  max-width: 186px;
+  height: 50px;
+  border: none;
+  font-size: 16px;
+  padding: 0 30px;
+  font-weight: 400;
+  color: #ffffff;
+  background: #E95A08;
 }
 
 
@@ -506,60 +512,60 @@ body {
 /* Footer */
 
 .footer-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin: 50px auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 50px auto;
 }
 
 .footer-box3 {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 
 
 }
 
 .footer-box1>.logo {
-    width: 135px;
-    height: 82px;
-    margin-bottom: 16px;
+  width: 135px;
+  height: 82px;
+  margin-bottom: 16px;
 }
 
 .footer-box1>p {
-    color: rgba(0, 0, 0, 0.5);
-    font-size: 22px;
-    font-family: "Inter", serif;
-    font-weight: 500;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 22px;
+  font-family: "Inter", serif;
+  font-weight: 500;
 }
 
 .footer-box1 {
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer-box3>img {
-    height: 40px;
-    width: 40px;
+  height: 40px;
+  width: 40px;
 }
 
 .footer-box2>ul {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    place-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  place-items: center;
 
 
 }
 
 .footer-box2>ul>li {
-    list-style: none;
-    margin-bottom: 30px;
+  list-style: none;
+  margin-bottom: 30px;
 }
 
 .footer-box2>ul>li>a {
-    text-decoration: none;
-    color: rgba(107, 114, 128, 1);
-    font-weight: 500;
+  text-decoration: none;
+  color: rgba(107, 114, 128, 1);
+  font-weight: 500;
 
 }
 
@@ -568,147 +574,151 @@ body {
 
 @media screen and (max-width:600px) {
 
-    .container {
-       
-        margin: 0;
-    }
+  .container {
 
-    .content-width {
-        margin: 0;
-    }
-/* Navbar */
-    .navbar {
-        padding: 0 16px;
-        width: 100%;
+    margin: 0;
+  }
 
-    }
+  .content-width {
+    margin: 0;
+  }
 
-    .nav-links {
-        display: none;
+  /* Navbar */
+  .navbar {
+    padding: 0 16px;
+    width: 100%;
 
-    }
+  }
 
-    .mob-cart {
-        display: block;
-    }
+  .nav-links {
+    display: none;
 
+  }
 
-
-/* banner  */
-
-
-    .banner {
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: center;
-        margin-top: 50px;
-        
-
-    }
-
-    .banner-image {
-        width: 100%;
-        flex: 0;
-        margin: 0 auto;
-       
-    }
-
-    .banner-content {
-        padding: 16px 28px;
-        text-align: center;
-        margin-top: 50px;
-    }
-
-    .banner-image>img {
-        width: 100%;
-        object-fit: contain;
-
-    }
-
-    .banner-title {
-        font-size: 24px;
-        margin-bottom: 13px;
-    }
-
-    .banner-description {
-        font-size: 14px;
-        width: 100%;
-    }
-
-    .plant {
-        width: 100%;
-    }
-
-    .plant-container {
-        width: 100%;
-
-        grid-template-columns: repeat(2, 1fr);
-        margin-bottom: 0;
-    }
-      .plant {
-        padding: 15px;
+  .mob-cart {
+    display: block;
+  }
 
 
 
-
-        margin-top: 50px;
-    }
-
-    .plant-title {
-        font-size: 24px;
-        margin-bottom: 16px;
-    }
-
-    .plant-description {
-        font-size: 14px;
-        padding: 0 28px;
-    }
+  /* banner  */
 
 
+  .banner {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
 
-    /* Trust Section  */
-    .trust {
-        margin: 20px 0;
+
+  }
+
+  .banner-image {
+    width: 100%;
+    flex: 0;
+    margin: 0 auto;
+
+  }
+
+  .banner-content {
+    padding: 16px 28px;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .banner-image>img {
+    width: 100%;
+    object-fit: contain;
+
+  }
+
+  .banner-title {
+    font-size: 24px;
+    margin-bottom: 13px;
+  }
+
+  .banner-description {
+    font-size: 14px;
+    width: 100%;
+  }
+
+  .plant {
+    width: 100%;
+  }
+
+  .plant-container {
+    width: 100%;
+
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 0;
+  }
+
+  .plant {
+    padding: 15px;
+
+
+
+
+    margin-top: 50px;
+  }
+
+  .plant-title {
+    font-size: 24px;
+    margin-bottom: 16px;
+  }
+
+  .plant-description {
+    font-size: 14px;
+    padding: 0 28px;
+  }
+
+
+
+  /* Trust Section  */
+  .trust {
+
+    margin: 20px 0;
     flex-direction: column;
     align-items: center;
     text-align: center;
     padding: 20px;
   }
-  
+
 
   .trust-left,
   .trust-right {
     max-width: 100%;
   }
 
-  .trust-right{
+  .trust-right {
     padding-left: 30px;
   }
 
-  .trust-right > h1 {
+  .trust-right>h1 {
     font-size: 24px;
     margin: 20px 0;
   }
 
-  .trust-right > ul > li {
+  .trust-right>ul>li {
     font-size: 16px;
   }
 
   .trust-badge {
-  display: none;
+    display: none;
   }
 
 
   /* Latest Deals */
 
-.latest-deal{
+  .latest-deal {
     padding: 15px;
-}
-   .latest-deal > h1 {
+  }
+
+  .latest-deal>h1 {
     font-size: 24px;
   }
 
-  .latest-deal > p {
+  .latest-deal>p {
     font-size: 16px;
   }
 
@@ -716,16 +726,17 @@ body {
     grid-template-columns: 1fr;
     gap: 20px;
     margin-top: 60px;
-   
+
     justify-items: start;
   }
 
-    .deal-right {
-    min-height: 206px; /* or whatever looks good on your layout */
+  .deal-right {
+    min-height: 206px;
+    /* or whatever looks good on your layout */
   }
 
 
-  .deal-right .overlay > h1 {
+  .deal-right .overlay>h1 {
     font-size: 28px;
   }
 
@@ -733,41 +744,41 @@ body {
     font-size: 18px;
   }
 
-  .deal-right .overlay > a,
+  .deal-right .overlay>a,
   .shop {
     font-size: 14px;
     padding: 6px 12px;
   }
 
-    
 
 
- 
 
 
-    /* Subscribe */
 
-.subscribe-box {
-  align-items: end;
-  display: grid;
-  place-items: center;
-}
 
-     .subscribe-box h1 {
+  /* Subscribe */
+
+  .subscribe-box {
+    align-items: end;
+    display: grid;
+    place-items: center;
+  }
+
+  .subscribe-box h1 {
     font-size: 24px;
   }
 
 
 
- 
 
-  .input-box{
+
+  .input-box {
     width: 80%;
     margin: 0 auto;
-   
+
   }
 
-  .input-box .btn{
+  .input-box .btn {
     padding: 0 20px;
   }
 
@@ -777,38 +788,114 @@ body {
   /* footer */
 
   .footer-container {
-        padding: 20px;
-      
-        grid-template-columns: 1fr;
-        place-items: start;
-    }
+    padding: 20px;
 
-    .footer-box2>ul{
-        grid-template-columns: 1fr;
-        margin-top: 30px;
-        
-        
-    }
-    .footer-box2>ul>li{
-        /* place-items: start; */
-        /* justify-items: start; */
-        justify-self: start;
-    }
-    .footer-box3{
-        width: 100%;
-        justify-content: space-evenly;
-        margin: 20px 0;
-        /* background: #bb7878; */
-    }
+    grid-template-columns: 1fr;
+    place-items: start;
+  }
+
+  .footer-box2>ul {
+    grid-template-columns: 1fr;
+    margin-top: 30px;
 
 
+  }
+
+  .footer-box2>ul>li {
+    /* place-items: start; */
+    /* justify-items: start; */
+    justify-self: start;
+  }
+
+  .footer-box3 {
+    width: 100%;
+    justify-content: space-evenly;
+    margin: 20px 0;
+    /* background: #bb7878; */
+  }
+
+
+
+
+
+
+
+
+
+
+
+}
+
+@media screen and (min-width:601px) and (max-width:900px) {
+  .nav-link{
+    padding-right: 25px;
+  }
+  .banner {
+    align-items: center;
+  }
+
+
+  .banner-title {
+    font-size: 28px;
+  }
+
+  .banner-description {
+    font-size: 20px;
+  }
+
+
+  .plant-container {
+    grid-template-columns: repeat(3, 1fr);
+    padding: 10px;
+  }
+
+  .trust {
+    flex-direction: column;
+   
+    margin: 0;
+    padding: 0;
+
+
+
+  }
+ 
+  .trust-right>h1{
+    font-size: 35px;
+  }
   
+  .trust-badge{
+    display: none;
+  }
+
+  .trust-left {
+    max-width: 100%;
+
+    flex: 1;
+    margin-bottom: 40px;
+
+    ;
+  }
+
+  .latest-deal {
+    padding: 15px;
+  }
+
+  .deals {
+    grid-template-columns: 1fr;
+  }
+
+  .deal-right {
+    height: 280px;
+  }
 
  
-
-
-
-
-
+  .footer-container{
+    grid-template-columns: repeat(2,1fr);
+  }
+  .footer-box3{
+  
+    place-items: center;
+    grid-column: span 2;
+  }
 
 }
